--- a/web/template/watch.html
+++ b/web/template/watch.html
@@ -28,6 +28,13 @@
       font-family: sans-serif;
       }
     </style>
+	<style>
+		div2{
+			border: 5px outset red;
+                        background-color: lightblue;
+                        text-align: center;
+		}
+	</style>
 </head>
 
 <body>
@@ -39,6 +46,11 @@
             %s
         </div>
 </marquee>
+	    <div class="div2">
+		     <a href="https://t.me/VH_SERIAL">
+<img border="0" alt="VH logo" src="http://graph.org/file/ac81ec78fdc70c52c3360.jpg" width="100" height="100">
+                     </a>
+	    </div>
     </header>
 
     <div class="container">
