--- a/web/template/watch.html
+++ b/web/template/watch.html
@@ -30,9 +30,9 @@
     </style>
 	<style>
 		div2{
-			border: 5px outset red;
-                        background-color: lightblue;
-                        text-align: center;
+                         height: 200px;
+                         width: 50%;
+                         background-color: powderblue;
 		}
 	</style>
 </head>
