--- a/web/template/watch.html
+++ b/web/template/watch.html
@@ -33,6 +33,7 @@
                          height: 200px;
                          width: 50%;
                          background-color: powderblue;
+			 margin-left: 50px;
 		}
 	</style>
 </head>
